# uesmanncpp

./: .travis.yml  CMakeLists.txt  Doxyfile  DoxyfileTravis  README.md  bpnet.hpp  data.h  data.hpp  genBoolMap.cpp  hinet.hpp  mnist.hpp  net.hpp  netFactory.hpp  netType.hpp  obnet.hpp  test.cpp  test.hpp  testBasic.cpp  testSaveLoad.cpp  testTrainBasic.cpp  testTrainBooleans.cpp  testTrainHIN.cpp  testTrainOB.cpp  todo  uesmann.hpp  uesnet.hpp
.ci/: generateDocumentation.sh  setup-ssh.sh  travis_deploy_key.enc
docs/: index.md  tests.md
html/: README_8md.html  README_8md_source.html  annotated.html  bpnet_8hpp.html  bpnet_8hpp__dep__incl.map  bpnet_8hpp__dep__incl.md5  bpnet_8hpp__incl.map  bpnet_8hpp__incl.md5  bpnet_8hpp_source.html  bug.html  classBPNet-members.html  classBPNet.html  classBPNet__coll__graph.map  classBPNet__coll__graph.md5  classBPNet__inherit__graph.map  classBPNet__inherit__graph.md5  classBooleanExampleSet-members.html  classBooleanExampleSet.html  classBooleanExampleSet__inherit__graph.map  classBooleanExampleSet__inherit__graph.md5  classExampleSet-members.html  classExampleSet.html  classExampleSet__inherit__graph.map  classExampleSet__inherit__graph.md5  classHInputNet-members.html  classHInputNet.html  classHInputNet__coll__graph.map  classHInputNet__coll__graph.md5  classMNIST-members.html  classMNIST.html  classNet-members.html  classNet.html  classNetFactory-members.html  classNetFactory.html  classNet__inherit__graph.map  classNet__inherit__graph.md5  classOutputBlendingNet-members.html  classOutputBlendingNet.html  (+131 more)
latex/: bug.tex  (+78 more)
(+85 files in other folders)
